--- a/ArtScanner/train_model.ipynb
+++ b/ArtScanner/train_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "24131137",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f1d82211",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
     "from tensorflow import get_logger\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "import random\n",
+    "import random as rd\n",
     "\n",
     "MainAttrDatabase = json.load(open('./Tools/ReliquaryLevelExcelConfigData.json'))\n",
     "SubAttrDatabase = json.load(open('./Tools/ReliquaryAffixExcelConfigData.json'))"
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "34d6b0db",
    "metadata": {},
    "outputs": [],
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "db6024c8",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6a28adb3",
    "metadata": {},
    "outputs": [],
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "cad6e909",
    "metadata": {},
    "outputs": [],
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a88480d6",
    "metadata": {},
    "outputs": [],
@@ -546,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "cce20905",
    "metadata": {},
    "outputs": [],
@@ -571,6 +571,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c5dbed34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "c2138232",
    "metadata": {},
    "outputs": [],
@@ -579,18 +587,21 @@
     "    q = 0\n",
     "    while True:\n",
     "        q += 1\n",
+    "        sub_attrs_num = rd.randrange(1, 5)\n",
     "        info_train = [gen_name(), gen_type(), gen_main_attr_name(), gen_main_attr_value(),\n",
-    "                       gen_level(), *gen_sub_attrs(3)]\n",
+    "                       gen_level(), *gen_sub_attrs(sub_attrs_num)]\n",
     "        imgs = generate_images(info_train)\n",
-    "        info = {\"name\": preprocess(imgs[0]),\n",
-    "                \"type\": preprocess(imgs[1]),\n",
-    "                \"main_attr_name\": preprocess(imgs[2]),\n",
-    "                \"main_attr_value\": preprocess(imgs[3]),\n",
-    "                \"level\": preprocess(imgs[4]),\n",
-    "                \"subattr_1\": preprocess(imgs[5]),\n",
-    "                \"subattr_2\": preprocess(imgs[6]),\n",
-    "                \"subattr_3\": preprocess(imgs[7]),\n",
+    "        info = {\"name\":imgs[0],\n",
+    "                \"type\":imgs[1],\n",
+    "                \"main_attr_name\": imgs[2],\n",
+    "                \"main_attr_value\": imgs[3],\n",
+    "                \"level\":     imgs[4],\n",
+    "#                 \"subattr_1\": imgs[5],\n",
+    "#                 \"subattr_2\": imgs[6],\n",
+    "#                 \"subattr_3\": imgs[7],\n",
     "        }\n",
+    "        for i in range(sub_attrs_num):\n",
+    "            info[f'subattr_{i+1}'] = imgs[i+5]\n",
     "        x = np.concatenate([preprocess(info[key]).T[None, :, :, None] for key in sorted(info.keys())], axis=0)\n",
     "        f = [list(i.ljust(15)) for i in info_train]\n",
     "        w = []\n",
@@ -603,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "c8f688ad",
    "metadata": {
     "scrolled": false
@@ -637,12 +648,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "b9b7b856",
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"ocr_model_v1\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "image (InputLayer)           [(None, 240, 16, 1)]      0         \n",
+      "_________________________________________________________________\n",
+      "functional_1 (Functional)    (None, 30, 2, 576)        2300784   \n",
+      "_________________________________________________________________\n",
+      "reshape (Reshape)            (None, 30, 1152)          0         \n",
+      "_________________________________________________________________\n",
+      "dense1 (Dense)               (None, 30, 64)            73792     \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 30, 64)            0         \n",
+      "_________________________________________________________________\n",
+      "bidirectional (Bidirectional (None, 30, 256)           197632    \n",
+      "_________________________________________________________________\n",
+      "bidirectional_1 (Bidirection (None, 30, 128)           164352    \n",
+      "_________________________________________________________________\n",
+      "dense2 (Dense)               (None, 30, 327)           42183     \n",
+      "=================================================================\n",
+      "Total params: 2,778,743\n",
+      "Trainable params: 2,766,599\n",
+      "Non-trainable params: 12,144\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "opt = keras.optimizers.Adam()\n",
     "model.compile(loss=ctc_loss, optimizer=opt, metrics=[CTCAccuracy('ctc_accu')])\n",
@@ -652,32 +694,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "5d2abb69",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df2ff0eb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tf"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "id": "3c839fc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/20\n",
+      "WARNING: AutoGraph could not transform <function decode_batch_predictions at 0x0000025DDD1FE280> and will run it as-is.\n",
+      "Please report this to the TensorFlow team. When filing the bug, set the verbosity to 10 (on Linux, `export AUTOGRAPH_VERBOSITY=10`) and attach the full output.\n",
+      "Cause: module 'gast' has no attribute 'Index'\n",
+      "To silence this warning, decorate the function with @tf.autograph.experimental.do_not_convert\n",
+      "  33/2500 [..............................] - ETA: 28:34 - loss: 47.8433 - ctc_accu: 0.0000e+00"
+     ]
+    }
+   ],
    "source": [
-    "model.fit(x=train_generator(), steps_per_epoch=1000 , epochs=15)"
+    "model.fit(x=train_generator(), steps_per_epoch=2500 , epochs=20)"
    ]
   }
  ],
