feat: detect 'locked' and 'location' field (CHS ver.)

--- a/ArtScanner/Tools/model_trainer/model_converter.ipynb
+++ b/ArtScanner/Tools/model_trainer/model_converter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "4cd8acf2",
    "metadata": {},
    "outputs": [],
@@ -18,14 +18,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "2109fc6e",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "TypeNames = [\"生之花\", \"死之羽\", \"时之沙\", \"空之杯\", \"理之冠\"]\n",
+    "Formats = {\n",
+    "    \"FIGHT_PROP_CRITICAL\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_CRITICAL_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ATTACK\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_HP\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_HP_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_DEFENSE\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_PHYSICAL_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_HEAL_ADD\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ROCK_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_WIND_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ICE_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_WATER_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_FIRE_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ELEC_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_GRASS_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_FIRE_SUB_HURT\": \"{:.1%}\",\n",
+    "}\n",
     "\n",
     "MainAttrNames = {\n",
     "    \"FIGHT_PROP_CRITICAL\": \"暴击率\",\n",
@@ -46,8 +67,22 @@
     "    \"FIGHT_PROP_WATER_ADD_HURT\": \"水元素伤害加成\",\n",
     "    \"FIGHT_PROP_FIRE_ADD_HURT\": \"火元素伤害加成\",\n",
     "    \"FIGHT_PROP_ELEC_ADD_HURT\": \"雷元素伤害加成\",\n",
-    "    \"FIGHT_PROP_GRASS_ADD_HURT\": \"草元素伤害加成\",\n",
-    "    \"FIGHT_PROP_FIRE_SUB_HURT\": \"火元素伤害减免\",\n",
+    "}\n",
+    "AttrName2Ids = {v: i.replace('_PERCENT', '') for i, v in MainAttrNames.items()}\n",
+    "\n",
+    "TypeNames = [\"生之花\", \"死之羽\", \"时之沙\", \"空之杯\", \"理之冠\"]\n",
+    "\n",
+    "SubAttrNames = {\n",
+    "    \"FIGHT_PROP_CRITICAL\": \"暴击率\",\n",
+    "    \"FIGHT_PROP_CRITICAL_HURT\": \"暴击伤害\",\n",
+    "    \"FIGHT_PROP_ATTACK\": \"攻击力\",\n",
+    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"攻击力\",\n",
+    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"元素精通\",\n",
+    "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"元素充能效率\",\n",
+    "    \"FIGHT_PROP_HP\": \"生命值\",\n",
+    "    \"FIGHT_PROP_HP_PERCENT\": \"生命值\",\n",
+    "    \"FIGHT_PROP_DEFENSE\": \"防御力\",\n",
+    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"防御力\",\n",
     "}\n",
     "\n",
     "ArtNames = [\n",
@@ -82,24 +117,80 @@
     "    [\"冒险家之花\", \"冒险家尾羽\", \"冒险家怀表\", \"冒险家金杯\", \"冒险家头带\"],\n",
     "    [\"幸运儿绿花\", \"幸运儿鹰羽\", \"幸运儿沙漏\", \"幸运儿之杯\", \"幸运儿银冠\"],\n",
     "    [\"游医的银莲\", \"游医的枭羽\", \"游医的怀钟\", \"游医的药壶\", \"游医的方巾\"],\n",
-    "    [\"勋绩之花\", \"昭武翎羽\", \"金铜时晷\", \"盟誓金爵\", \"将帅兜鏊\"],\n",
+    "    [\"勋绩之花\", \"昭武翎羽\", \"金铜时晷\", \"盟誓金爵\", \"将帅兜鍪\"],\n",
     "    [\"无垢之花\", \"贤医之羽\", \"停摆之刻\", \"超越之盏\", \"嗤笑之面\"],\n",
     "    [\"明威之镡\", \"切落之羽\", \"雷云之笼\", \"绯花之壶\", \"华饰之兜\"],  # 绝缘之旗印\n",
     "    [\"羁缠之花\", \"思忆之矢\", \"朝露之时\", \"祈望之心\", \"无常之面\"],  # 追忆之注连\n",
+    "    [\"祝圣精华\", \"祝圣油膏\"],                                  # 强化材料\n",
     "]\n",
     "\n",
-    "SubAttrNames = {\n",
-    "    \"FIGHT_PROP_CRITICAL\": \"暴击率\",\n",
-    "    \"FIGHT_PROP_CRITICAL_HURT\": \"暴击伤害\",\n",
-    "    \"FIGHT_PROP_ATTACK\": \"攻击力\",\n",
-    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"攻击力\",\n",
-    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"元素精通\",\n",
-    "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"元素充能效率\",\n",
-    "    \"FIGHT_PROP_HP\": \"生命值\",\n",
-    "    \"FIGHT_PROP_HP_PERCENT\": \"生命值\",\n",
-    "    \"FIGHT_PROP_DEFENSE\": \"防御力\",\n",
-    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"防御力\",\n",
-    "}\n",
+    "Users = [\n",
+    "    \"空\",\n",
+    "    \"荧\",\n",
+    "    \"安柏\",\n",
+    "    \"凯亚\",\n",
+    "    \"丽莎\",\n",
+    "    \"琴\",\n",
+    "    \"可莉\",\n",
+    "    \"诺艾尔\",\n",
+    "    \"芭芭拉\",\n",
+    "    \"温迪\",\n",
+    "    \"雷泽\",\n",
+    "    \"迪卢克\",\n",
+    "    \"班尼特\",\n",
+    "    \"菲谢尔\",\n",
+    "    \"北斗\",\n",
+    "    \"凝光\",\n",
+    "    \"香菱\",\n",
+    "    \"行秋\",\n",
+    "    \"重云\",\n",
+    "    \"砂糖\",\n",
+    "    \"莫娜\",\n",
+    "    \"刻晴\",\n",
+    "    \"七七\",\n",
+    "    \"达达利亚\",\n",
+    "    \"迪奥娜\",\n",
+    "    \"钟离\",\n",
+    "    \"辛焱\",\n",
+    "    \"阿贝多\",\n",
+    "    \"甘雨\",\n",
+    "    \"魈\",\n",
+    "    \"胡桃\",\n",
+    "    \"罗莎莉亚\",\n",
+    "    \"烟绯\",\n",
+    "    \"优菈\",\n",
+    "    \"埃洛伊\",\n",
+    "    \"珊瑚宫心海\",\n",
+    "    \"雷电将军\",\n",
+    "    \"九条裟罗\",\n",
+    "    \"早柚\",\n",
+    "    \"宵宫\",\n",
+    "    \"神里绫华\",\n",
+    "    \"枫原万叶\",\n",
+    "    \"托马\"\n",
+    "]\n",
+    "\n",
+    "scale_ratio = 1\n",
+    "characters = sorted(\n",
+    "    [\n",
+    "        *set(\n",
+    "            \"\".join(\n",
+    "                sum(ArtNames, [])\n",
+    "                + TypeNames\n",
+    "                + list(MainAttrNames.values())\n",
+    "                + list(SubAttrNames.values())\n",
+    "                + list(\".,+%0123456789\")\n",
+    "                + list(Users)\n",
+    "                + list(\"已装备\")\n",
+    "                # + list(MaterialsNameCHS)\n",
+    "            )\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "char_to_num = StringLookup(\n",
+    "    vocabulary=list(characters), num_oov_indices=0, mask_token=\"\")\n",
+    "num_to_char = StringLookup(\n",
+    "    vocabulary=char_to_num.get_vocabulary(), oov_token=\"\", mask_token=\"\", invert=True)\n",
     "\n",
     "characters = sorted(\n",
     "    [\n",
@@ -110,6 +201,9 @@
     "                + list(MainAttrNames.values())\n",
     "                + list(SubAttrNames.values())\n",
     "                + list(\".,+%0123456789\")\n",
+    "                + list(Users)\n",
+    "                + list(\"已装备\")\n",
+    "                # + list(MaterialsNameCHS)\n",
     "            )\n",
     "        )\n",
     "    ]\n",
@@ -136,44 +230,118 @@
     "x = Reshape(target_shape=new_shape, name=\"reshape\")(x)\n",
     "x = Dense(64, activation=\"relu\", name=\"dense1\")(x)\n",
     "x = Dropout(0.2)(x)\n",
+    "\n",
     "# RNNs\n",
     "x = Bidirectional(LSTM(128, return_sequences=True, dropout=0.25))(x)\n",
     "x = Bidirectional(LSTM(64, return_sequences=True, dropout=0.25))(x)\n",
+    "\n",
     "# Output layer\n",
     "output = Dense(len(characters) + 2, activation=\"softmax\", name=\"dense2\")(x)\n",
+    "\n",
     "# Define the model\n",
     "model = Model(inputs=[input_img], outputs=output, name=\"ocr_model_v1\")\n",
     "\n",
-    "model.load_weights('./weights-improvement-55-1.00.hdf5')"
+    "model.load_weights('./artifact-weights-improvement-63-1.00.hdf5')\n",
+    "model.save('./savedmodel.h5')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "367f6e01",
    "metadata": {},
    "outputs": [],
    "source": [
+    "Formats = {\n",
+    "    \"FIGHT_PROP_CRITICAL\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_CRITICAL_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ATTACK\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_HP\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_HP_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_DEFENSE\": \"{:,.0f}\",\n",
+    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_PHYSICAL_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_HEAL_ADD\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ROCK_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_WIND_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ICE_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_WATER_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_FIRE_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_ELEC_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_GRASS_ADD_HURT\": \"{:.1%}\",\n",
+    "    \"FIGHT_PROP_FIRE_SUB_HURT\": \"{:.1%}\",\n",
+    "}\n",
+    "\n",
+    "\n",
+    "\n",
+    "Users_EN = [\n",
+    "    \"Aether\",\n",
+    "    \"Albedo\",\n",
+    "    \"Aloy\",\n",
+    "    \"Amber\",\n",
+    "    \"Barbara\",\n",
+    "    \"Beidou\",\n",
+    "    \"Bennett\",\n",
+    "    \"Chongyun\",\n",
+    "    \"Diluc\",\n",
+    "    \"Diona\",\n",
+    "    \"Eula\",\n",
+    "    \"Fischl\",\n",
+    "    \"Ganyu\",\n",
+    "    \"Hu Tao\",\n",
+    "    \"Jean\",\n",
+    "    \"Kaedehara Kazuha\",\n",
+    "    \"Kaeya\",\n",
+    "    \"Kamisato Ayaka\",\n",
+    "    \"Keqing\",\n",
+    "    \"Klee\",\n",
+    "    \"Kujou Sara\",\n",
+    "    \"Lisa\",\n",
+    "    \"Lumine\",\n",
+    "    \"Mona\",\n",
+    "    \"Ningguang\",\n",
+    "    \"Noelle\",\n",
+    "    \"Qiqi\",\n",
+    "    \"Raiden Shogun\",\n",
+    "    \"Razor\",\n",
+    "    \"Rosaria\",\n",
+    "    \"Sangonomiya Kokomi\",\n",
+    "    \"Sayu\",\n",
+    "    \"Sucrose\",\n",
+    "    \"Tartaglia\",\n",
+    "    \"Venti\",\n",
+    "    \"Xiangling\",\n",
+    "    \"Xiao\",\n",
+    "    \"Xingqiu\",\n",
+    "    \"Xinyan\",\n",
+    "    \"Yanfei\",\n",
+    "    \"Yoimiya\",\n",
+    "    \"Zhongli\",\n",
+    "]\n",
+    "\n",
     "MainAttrNames_EN = {\n",
-    "    \"FIGHT_PROP_CRITICAL\":          \"CRIT Rate\",\n",
-    "    \"FIGHT_PROP_CRITICAL_HURT\":     \"CRIT DMG\",\n",
-    "    \"FIGHT_PROP_ATTACK\":            \"ATK\",\n",
-    "    \"FIGHT_PROP_ATTACK_PERCENT\":    \"ATK\",\n",
-    "    \"FIGHT_PROP_ELEMENT_MASTERY\":   \"Elemental Mastery\",\n",
+    "    \"FIGHT_PROP_CRITICAL\": \"CRIT Rate\",\n",
+    "    \"FIGHT_PROP_CRITICAL_HURT\": \"CRIT DMG\",\n",
+    "    \"FIGHT_PROP_ATTACK\": \"ATK\",\n",
+    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"ATK\",\n",
+    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"Elemental Mastery\",\n",
     "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"Energy Recharge\",\n",
-    "    \"FIGHT_PROP_HP\":                \"HP\",\n",
-    "    \"FIGHT_PROP_HP_PERCENT\":        \"HP\",\n",
-    "    \"FIGHT_PROP_DEFENSE\":           \"DEF\",\n",
-    "    \"FIGHT_PROP_DEFENSE_PERCENT\":   \"DEF\",\n",
+    "    \"FIGHT_PROP_HP\": \"HP\",\n",
+    "    \"FIGHT_PROP_HP_PERCENT\": \"HP\",\n",
+    "    \"FIGHT_PROP_DEFENSE\": \"DEF\",\n",
+    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"DEF\",\n",
     "    \"FIGHT_PROP_PHYSICAL_ADD_HURT\": \"Physical DMG Bonus\",\n",
-    "    \"FIGHT_PROP_HEAL_ADD\":          \"Healing Bonus\",\n",
-    "    \"FIGHT_PROP_ROCK_ADD_HURT\":     \"Geo DMG Bonus\",\n",
-    "    \"FIGHT_PROP_WIND_ADD_HURT\":     \"Anemo DMG Bonus\",\n",
-    "    \"FIGHT_PROP_ICE_ADD_HURT\":      \"Cryo DMG Bonus\",\n",
-    "    \"FIGHT_PROP_WATER_ADD_HURT\":    \"Hydro DMG Bonus\",\n",
-    "    \"FIGHT_PROP_FIRE_ADD_HURT\":     \"Pyro DMG Bonus\",\n",
-    "    \"FIGHT_PROP_ELEC_ADD_HURT\":     \"Electro DMG Bonus\",\n",
-    "    \"FIGHT_PROP_GRASS_ADD_HURT\":    \"Dendro DMG Bonus\",\n",
+    "    \"FIGHT_PROP_HEAL_ADD\": \"Healing Bonus\",\n",
+    "    \"FIGHT_PROP_ROCK_ADD_HURT\": \"Geo DMG Bonus\",\n",
+    "    \"FIGHT_PROP_WIND_ADD_HURT\": \"Anemo DMG Bonus\",\n",
+    "    \"FIGHT_PROP_ICE_ADD_HURT\": \"Cryo DMG Bonus\",\n",
+    "    \"FIGHT_PROP_WATER_ADD_HURT\": \"Hydro DMG Bonus\",\n",
+    "    \"FIGHT_PROP_FIRE_ADD_HURT\": \"Pyro DMG Bonus\",\n",
+    "    \"FIGHT_PROP_ELEC_ADD_HURT\": \"Electro DMG Bonus\",\n",
+    "    \"FIGHT_PROP_GRASS_ADD_HURT\": \"Dendro DMG Bonus\",\n",
     "}\n",
     "\n",
     "TypeNames_EN = [\"Flower of Life\",\n",
@@ -182,17 +350,19 @@
     "                \"Goblet of Eonothem\",\n",
     "                \"Circlet of Logos\"]\n",
     "\n",
+    "AttrName2Ids_EN = {v: i.replace('_PERCENT', '') for i, v in MainAttrNames_EN.items()}\n",
+    "\n",
     "SubAttrNames_EN = {\n",
-    "    \"FIGHT_PROP_CRITICAL\":          \"CRIT Rate\",\n",
-    "    \"FIGHT_PROP_CRITICAL_HURT\":     \"CRIT DMG\",\n",
-    "    \"FIGHT_PROP_ATTACK\":            \"ATK\",\n",
-    "    \"FIGHT_PROP_ATTACK_PERCENT\":    \"ATK\",\n",
-    "    \"FIGHT_PROP_ELEMENT_MASTERY\":   \"Elemental Mastery\",\n",
+    "    \"FIGHT_PROP_CRITICAL\": \"CRIT Rate\",\n",
+    "    \"FIGHT_PROP_CRITICAL_HURT\": \"CRIT DMG\",\n",
+    "    \"FIGHT_PROP_ATTACK\": \"ATK\",\n",
+    "    \"FIGHT_PROP_ATTACK_PERCENT\": \"ATK\",\n",
+    "    \"FIGHT_PROP_ELEMENT_MASTERY\": \"Elemental Mastery\",\n",
     "    \"FIGHT_PROP_CHARGE_EFFICIENCY\": \"Energy Recharge\",\n",
-    "    \"FIGHT_PROP_HP\":                \"HP\",\n",
-    "    \"FIGHT_PROP_HP_PERCENT\":        \"HP\",\n",
-    "    \"FIGHT_PROP_DEFENSE\":           \"DEF\",\n",
-    "    \"FIGHT_PROP_DEFENSE_PERCENT\":   \"DEF\",\n",
+    "    \"FIGHT_PROP_HP\": \"HP\",\n",
+    "    \"FIGHT_PROP_HP_PERCENT\": \"HP\",\n",
+    "    \"FIGHT_PROP_DEFENSE\": \"DEF\",\n",
+    "    \"FIGHT_PROP_DEFENSE_PERCENT\": \"DEF\",\n",
     "}\n",
     "\n",
     "ArtNames_EN = [\n",
@@ -262,7 +432,8 @@
     "    ['Magnificent Tsuba', 'Sundered Feather', 'Storm Cage',\n",
     "     'Scarlet Vessel', 'Ornate Kabuto'],\n",
     "    ['Entangling Bloom', 'Shaft of Remembrance', \"Morning Dew's Moment\",\n",
-    "     'Hopeful Heart', 'Capricious Visage']\n",
+    "     'Hopeful Heart', 'Capricious Visage'],\n",
+    "    ['Sanctifying Unction', 'Sanctifying Essence']\n",
     "]\n",
     "\n",
     "characters = sorted(\n",
@@ -274,6 +445,8 @@
     "                + list(MainAttrNames_EN.values())\n",
     "                + list(SubAttrNames_EN.values())\n",
     "                + list(\".,+%0123456789\")\n",
+    "                + list(Users_EN)\n",
+    "                + list('Equipped: ')\n",
     "            )\n",
     "        )\n",
     "    ]\n",
@@ -311,13 +484,23 @@
     "\n",
     "# Define the model\n",
     "model_EN = Model(inputs=[input_img_EN], outputs=output_EN, name=\"ocr_model_en\")\n",
-    "\n",
-    "model_EN.load_weights('./weights-improvement-EN-81-1.00.hdf5')"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
+   "id": "8e7cd6cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.load_weights('./train/artifact-weights-improvement-63-1.00.hdf5')\n",
+    "model_EN.load_weights('./train/artifact-weights-improvement-EN-50-1.00.hdf5')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "e5691dc4",
    "metadata": {},
    "outputs": [],
