--- a/ArtScanner/Tools/model_trainer/model_converter.ipynb
+++ b/ArtScanner/Tools/model_trainer/model_converter.ipynb
@@ -247,8 +247,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "367f6e01",
+   "execution_count": null,
+   "id": "18f64801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,6 +320,7 @@
     "    \"Yanfei\",\n",
     "    \"Yoimiya\",\n",
     "    \"Zhongli\",\n",
+    "    \"Thoma\"\n",
     "]\n",
     "\n",
     "MainAttrNames_EN = {\n",
@@ -436,6 +437,215 @@
     "    ['Sanctifying Unction', 'Sanctifying Essence']\n",
     "]\n",
     "\n",
+    "# 灰度\n",
+    "def to_gray(text_img):\n",
+    "    text_img = np.array(text_img)\n",
+    "    if len(text_img.shape) > 2:\n",
+    "        text_img = (text_img[..., :3] @ [[[0.299], [0.587], [0.114]]])[:, :, 0]\n",
+    "    return np.array(text_img, np.float32)\n",
+    "\n",
+    "\n",
+    "def normalize(img, auto_inverse=True):\n",
+    "    img -= img.min()\n",
+    "    img /= img.max()\n",
+    "    if auto_inverse and img[-1, -1] > 0.5:\n",
+    "        img = 1 - img\n",
+    "    return img\n",
+    "\n",
+    "\n",
+    "def resize_to_height(img):\n",
+    "    global height\n",
+    "    height_ = height\n",
+    "    return (\n",
+    "            np.array(\n",
+    "                Image.fromarray(np.uint8(img * 255)).resize(\n",
+    "                    (int(img.shape[1] * height_ / img.shape[0]), height_),\n",
+    "                    Image.BILINEAR, )\n",
+    "            ) / 255)\n",
+    "\n",
+    "\n",
+    "def pad_to_width(img):\n",
+    "    global width\n",
+    "    width_ = width\n",
+    "\n",
+    "    if img.shape[1] >= width_:\n",
+    "        return img[:, :width_]\n",
+    "\n",
+    "    return np.pad(\n",
+    "        img, [[0, 0], [0, width_ - img.shape[1]]], mode=\"constant\", constant_values=0\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "# 裁剪\n",
+    "def crop(img, tol=0.7):\n",
+    "    # img is 2D image data\n",
+    "    # tol  is tolerance\n",
+    "    mask = img > tol\n",
+    "    m, n = img.shape\n",
+    "    mask0, mask1 = mask.any(0), mask.any(1)\n",
+    "    col_start, col_end = mask0.argmax(), n - mask0[::-1].argmax()\n",
+    "    row_start, row_end = mask1.argmax(), m - mask1[::-1].argmax()\n",
+    "    #     print(row_end-row_start, col_end-col_start)\n",
+    "    return img[row_start:row_end, col_start:col_end]\n",
+    "\n",
+    "\n",
+    "# 二值化 -- 删除背景\n",
+    "def binarization(img, thresh=0.5):\n",
+    "    return np.where((img < thresh), 0, img)\n",
+    "\n",
+    "\n",
+    "def resplice(img):\n",
+    "    line_height = 27\n",
+    "    if (img[30] == 0.).all():\n",
+    "        res1 = img[:line_height, :]\n",
+    "        res2 = img[-line_height:, :]\n",
+    "        space = np.zeros((res1.shape[0], 10))\n",
+    "        res = np.concatenate((res1, space, res2), axis=1)\n",
+    "        return crop(res, tol=0)\n",
+    "    else:\n",
+    "        return img\n",
+    "\n",
+    "\n",
+    "def zoom(img):\n",
+    "    height_ = 60\n",
+    "    return (\n",
+    "            np.array(\n",
+    "                Image.fromarray(np.uint8(img * 255)).resize(\n",
+    "                    (int(img.shape[1] * height_ / img.shape[0]), height_),\n",
+    "                    Image.BILINEAR, )\n",
+    "            ) / 255)\n",
+    "\n",
+    "\n",
+    "def preprocess(text_img):\n",
+    "    result = to_gray(text_img)\n",
+    "    result = normalize(result, True)\n",
+    "    result = binarization(result)\n",
+    "    result = crop(result, tol=0)\n",
+    "\n",
+    "    result = zoom(result)\n",
+    "    result = resplice(result)\n",
+    "\n",
+    "    result = resize_to_height(result)\n",
+    "    result = pad_to_width(result)\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def decode(pred):\n",
+    "    input_len = np.ones(pred.shape[0]) * pred.shape[1]\n",
+    "    # Use greedy search. For complex tasks, you can use beam search\n",
+    "    results = ctc_decode(pred, input_length=input_len, greedy=True)[0][0][:, :max_length]\n",
+    "    # Iterate over the results and get back the text\n",
+    "    output_text = []\n",
+    "    for res in results:\n",
+    "        res = num_to_char(res)\n",
+    "        res = reduce_join(res)\n",
+    "        res = res.numpy().decode(\"utf-8\")\n",
+    "        output_text.append(res)\n",
+    "    return output_text\n",
+    "\n",
+    "\n",
+    "@tf.autograph.experimental.do_not_convert\n",
+    "def ctc_loss(y_true, y_pred):\n",
+    "    batch_len = tf.cast(tf.shape(y_true)[0], dtype=\"int64\")\n",
+    "    input_length = tf.cast(tf.shape(y_pred)[1], dtype=\"int64\")\n",
+    "    label_length = tf.math.count_nonzero(y_true, axis=-1, keepdims=True)\n",
+    "\n",
+    "    input_length = input_length * tf.ones(shape=(batch_len, 1), dtype=\"int64\")\n",
+    "    label_length = label_length * tf.ones(shape=(batch_len, 1), dtype=\"int64\")\n",
+    "\n",
+    "    return keras.backend.ctc_batch_cost(y_true, y_pred, input_length, label_length)\n",
+    "\n",
+    "\n",
+    "# A utility function to decode the output of the network\n",
+    "def decode_batch_predictions(pred):\n",
+    "    input_len = np.ones(pred.shape[0]) * pred.shape[1]\n",
+    "    # Use greedy search. For complex tasks, you can use beam search\n",
+    "    results = keras.backend.ctc_decode(pred, input_length=input_len, greedy=True)[0][0][\n",
+    "              :, :max_length\n",
+    "              ]\n",
+    "    # Iterate over the results and get back the text\n",
+    "    output_text = []\n",
+    "    for res in results:\n",
+    "        res = num_to_char(res)\n",
+    "        res = tf.strings.reduce_join(res)\n",
+    "        res = res.numpy().decode(\"utf-8\")\n",
+    "        output_text.append(res)\n",
+    "    return output_text\n",
+    "\n",
+    "\n",
+    "class CTCAccuracy(tf.keras.metrics.Metric):\n",
+    "    def __init__(self, name='ctc_accuracy', **kwargs):\n",
+    "        super(CTCAccuracy, self).__init__(name=name, **kwargs)\n",
+    "        self.correct_count = 0\n",
+    "        self.all_count = 0\n",
+    "\n",
+    "    def update_state(self, y_true, y_pred, sample_weight=None):\n",
+    "        pred_text = decode_batch_predictions(y_pred)\n",
+    "        self.all_count += len(pred_text)\n",
+    "        true_text = []\n",
+    "        for res in y_true:\n",
+    "            res = num_to_char(res)\n",
+    "            res = tf.strings.reduce_join(res)\n",
+    "            res = res.numpy().decode(\"utf-8\")\n",
+    "            true_text.append(res)\n",
+    "        self.correct_count += sum([i == j for i, j in zip(pred_text, true_text)])\n",
+    "\n",
+    "    def result(self):\n",
+    "        return self.correct_count / self.all_count\n",
+    "\n",
+    "    def reset_states(self):\n",
+    "        self.correct_count = 0\n",
+    "        self.all_count = 0\n",
+    "        \n",
+    "scale_ratio = 0.625\n",
+    "\n",
+    "\n",
+    "def extract_art_info_EN(art_img):\n",
+    "    name = art_img.crop([i * scale_ratio for i in Config_EN.name_coords])\n",
+    "    type = art_img.crop([i * scale_ratio for i in Config_EN.type_coords])\n",
+    "    main_attr_name = art_img.crop([i * scale_ratio for i in Config_EN.main_attr_name_coords])\n",
+    "    main_attr_value = art_img.crop([i * scale_ratio for i in Config_EN.main_attr_value_coords])\n",
+    "    level = art_img.crop([i * scale_ratio for i in Config_EN.level_coords])\n",
+    "    subattr_1 = art_img.crop([i * scale_ratio for i in Config_EN.subattr_1_coords])  # [73, 83, 102]\n",
+    "    subattr_2 = art_img.crop([i * scale_ratio for i in Config_EN.subattr_2_coords])\n",
+    "    subattr_3 = art_img.crop([i * scale_ratio for i in Config_EN.subattr_3_coords])\n",
+    "    subattr_4 = art_img.crop([i * scale_ratio for i in Config_EN.subattr_4_coords])\n",
+    "    if np.all(np.abs(np.array(subattr_1, np.float) - [[[73, 83, 102]]]).max(axis=-1) > 25):\n",
+    "        del subattr_1\n",
+    "        del subattr_2\n",
+    "        del subattr_3\n",
+    "        del subattr_4\n",
+    "    elif np.all(np.abs(np.array(subattr_2, np.float) - [[[73, 83, 102]]]).max(axis=-1) > 25):\n",
+    "        del subattr_2\n",
+    "        del subattr_3\n",
+    "        del subattr_4\n",
+    "    elif np.all(np.abs(np.array(subattr_3, np.float) - [[[73, 83, 102]]]).max(axis=-1) > 25):\n",
+    "        del subattr_3\n",
+    "        del subattr_4\n",
+    "    elif np.all(np.abs(np.array(subattr_4, np.float) - [[[73, 83, 102]]]).max(axis=-1) > 25):\n",
+    "        del subattr_4\n",
+    "    return {key: value for key, value in locals().items() if key not in ['art_img']}\n",
+    "\n",
+    "class Config_EN:\n",
+    "    name_coords = [33, 4, 619, 72]\n",
+    "    type_coords = [32, 89, 350, 134]\n",
+    "    main_attr_name_coords = [35, 200, 350, 240]\n",
+    "    main_attr_value_coords = [35, 240, 350, 300]\n",
+    "    star_coords = [30, 310, 350, 360]\n",
+    "    level_coords = [43, 414, 112, 444]\n",
+    "    subattr_1_coords = [67, 480, 560, 520]\n",
+    "    subattr_2_coords = [67, 532, 560, 572]\n",
+    "    subattr_3_coords = [67, 584, 560, 624]\n",
+    "    subattr_4_coords = [67, 636, 560, 676]\n",
+    "    equipped_coords = [105, 1060, 500, 1100]\n",
+    "    lock_coords = [570, 405, 620, 455]\n",
+    "    \n",
+    "width = 384\n",
+    "height = 16\n",
+    "max_length = 40\n",
+    "input_shape = (width, height)\n",
+    "\n",
+    "\n",
     "characters = sorted(\n",
     "    [\n",
     "        *set(\n",
@@ -452,61 +662,39 @@
     "    ]\n",
     ")\n",
     "\n",
-    "char_to_num_EN = StringLookup(\n",
+    "char_to_num = StringLookup(\n",
     "    vocabulary=list(characters), num_oov_indices=0, mask_token=\"\")\n",
-    "num_to_char_EN = StringLookup(\n",
+    "num_to_char = StringLookup(\n",
     "    vocabulary=char_to_num.get_vocabulary(), oov_token=\"\", mask_token=\"\", invert=True)\n",
     "\n",
+    "width = 384\n",
+    "height = 16\n",
+    "max_length = 40\n",
+    "input_shape = (width, height)\n",
     "\n",
-    "width_EN = 384\n",
-    "height_EN = 16\n",
-    "max_length_EN = 40\n",
-    "input_shape_EN = (width, height)\n",
-    "\n",
-    "input_img_EN = Input(\n",
-    "    shape=(input_shape_EN[0], input_shape_EN[1], 1), name=\"image\", dtype=\"float32\"\n",
+    "input_img = Input(\n",
+    "    shape=(input_shape[0], input_shape[1], 1), name=\"image\", dtype=\"float32\"\n",
     ")\n",
-    "mobilenet_EN = MobileNetV3_Small(\n",
-    "    (input_shape_EN[0],input_shape_EN[1], 1), 0, alpha=1.0, include_top=False\n",
+    "mobilenet = MobileNetV3_Small(\n",
+    "    (input_shape[0], input_shape[1], 1), 0, alpha=1.0, include_top=False\n",
     ").build()\n",
-    "x_EN = mobilenet(input_img_EN)\n",
-    "new_shape_EN = ((input_shape_EN[0] // 8), (input_shape_EN[1] // 8) * 576)\n",
-    "x_EN = Reshape(target_shape=new_shape, name=\"reshape\")(x_EN)\n",
-    "x_EN = Dense(64, activation=\"relu\", name=\"dense1\")(x_EN)\n",
-    "x_EN = Dropout(0.2)(x_EN)\n",
+    "x = mobilenet(input_img)\n",
+    "new_shape = ((input_shape[0] // 8), (input_shape[1] // 8) * 576)\n",
+    "x = Reshape(target_shape=new_shape, name=\"reshape\")(x)\n",
+    "x = Dense(64, activation=\"relu\", name=\"dense1\")(x)\n",
+    "x = Dropout(0.2)(x)\n",
     "\n",
     "# RNNs\n",
-    "x_EN = Bidirectional(LSTM(128, return_sequences=True, dropout=0.25))(x_EN)\n",
-    "x_EN = Bidirectional(LSTM(64, return_sequences=True, dropout=0.25))(x_EN)\n",
+    "x = Bidirectional(LSTM(128, return_sequences=True, dropout=0.25))(x)\n",
+    "x = Bidirectional(LSTM(64, return_sequences=True, dropout=0.25))(x)\n",
     "\n",
     "# Output layer\n",
-    "output_EN = Dense(len(characters) + 2, activation=\"softmax\", name=\"dense2\")(x_EN)\n",
+    "output = Dense(len(characters) + 2, activation=\"softmax\", name=\"dense2\")(x)\n",
     "\n",
-    "# Define the model\n",
-    "model_EN = Model(inputs=[input_img_EN], outputs=output_EN, name=\"ocr_model_en\")\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "8e7cd6cb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.load_weights('./train/artifact-weights-improvement-63-1.00.hdf5')\n",
-    "model_EN.load_weights('./train/artifact-weights-improvement-EN-50-1.00.hdf5')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e5691dc4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model.save('../../savedmodel.h5')\n",
-    "model_EN.save('../../savedmodel_EN.h5')"
+    "\n",
+    "model = Model(inputs=[input_img], outputs=output, name=\"ocr_model_en\")\n",
+    "model.load_weights('./Tools/model_trainer/train/artifact-weights-improvement-EN-50-1.00.hdf5')\n",
+    "model.save('./savedmodel_EN.h5')"
    ]
   }
  ],
